# meta_project_cli

./: Cargo.toml
.github/workflows/: auto-format.yml  ci.yml
src/: lib.rs  main.rs
