[package]
name = "meta_project_cli"
version = "0.1.0"
edition = "2021"
description = "Project management plugin for meta CLI to sync and update project repositories"
license = "MIT"

[[bin]]
name = "meta-project"
path = "src/main.rs"

[lib]
name = "meta_project_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
meta_git_lib = { path = "../meta_git_lib" }

[dev-dependencies]
tempfile = "3"
