[package]
name = "meta_project_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Project management plugin for meta CLI to sync and update project repositories"

[[bin]]
name = "meta-project"
path = "src/main.rs"

[lib]
name = "meta_project_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
meta_git_lib = { path = "../meta_git_lib" }

[dev-dependencies]
tempfile = "3"
